--- a/src/main/js/html/nurse.html
+++ b/src/main/js/html/nurse.html
@@ -121,7 +121,7 @@
           <div data-dd4-table="$ctrl.TableType.UNCONFIRMED"></div>
         </div>
         <div data-ng-if="$ctrl.selectedTab == $ctrl.tabs.pending">
-          <div data-dd4-table="$ctrl.TableType.PENDING_ASSESSMENT"></div>
+          <dd4-table metadata="$ctrl.TableType.PENDING_ASSESSMENT"></dd4-table>
         </div>
         <div data-ng-if="$ctrl.selectedTab == $ctrl.tabs.reviewable">
           <div data-dd4-table="$ctrl.TableType.REVIEWABLE"></div>
