--- a/src/main/js/html/vendor.html
+++ b/src/main/js/html/vendor.html
@@ -53,7 +53,7 @@
 					<div data-dd4-table="$ctrl.TableType.PATIENTS"></div>
 				</div>
 				<div data-ng-if="$ctrl.selectedTab == $ctrl.tabs.pending">
-					<div data-dd4-table="$ctrl.TableType.PENDING_ASSESSMENT"></div>
+					<dd4-table metadata="$ctrl.TableType.PENDING_ASSESSMENT"></dd4-table>
 				</div>
 				<div data-ng-if="$ctrl.selectedTab == $ctrl.tabs.billable">
           <div class="block-border">
